--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "node": "^16"
     },
     "dependencies": {
-        "discord.js": "^12.5.3"
+        "@types/express": "^4.17.12",
+        "discord.js": "^12.5.3",
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "@tsconfig/node16": "^1.0.1",
