--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
         "node": "^16"
     },
     "dependencies": {
-        "@types/express": "^4.17.12",
-        "discord.js": "^12.5.3",
+        "discord.js": "github:discordjs/discord.js",
         "express": "^4.17.1"
     },
     "devDependencies": {
         "@tsconfig/node16": "^1.0.1",
+        "@types/express": "^4.17.12",
         "@types/node": "^14.14.6",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
