--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "randle-discord",
-    "description": "Dice, cards, and polling bot for Discord.",
+    "description": "Dice, cards, and polls bot for Discord.",
     "version": "1.0.0",
     "main": "./dist/app.js",
     "scripts": {
@@ -20,10 +20,10 @@
     "devDependencies": {
         "@tsconfig/node16": "^1.0.1",
         "@types/express": "^4.17.12",
-        "@types/node": "^14.14.6",
+        "@types/node": "^15.9.0",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
-        "dotenv": "^8.2",
+        "dotenv": "^10.0.0",
         "eslint": "^7.12.1",
         "ts-node-dev": "^1.0.0-pre.62",
         "typescript": "^4.1.3"
