--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "randle-discord",
     "description": "Dice, cards, and polls bot for Discord.",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "main": "./dist/app.js",
     "scripts": {
         "build": "tsc",
@@ -13,7 +13,7 @@
         "node": "^16"
     },
     "dependencies": {
-        "discord.js": "github:discordjs/discord.js",
+        "discord.js": "^13.0.1",
         "express": "^4.17.1",
         "got": "^11.8.2",
         "json5": "^2.2.0",
@@ -22,7 +22,7 @@
     "devDependencies": {
         "@tsconfig/node16": "^1.0.1",
         "@types/express": "^4.17.12",
-        "@types/node": "^15.9.0",
+        "@types/node": "^16.6.0",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
         "dotenv": "^10.0.0",
