--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
         "express": "^4.17.1",
         "got": "^11.8.2",
         "json5": "^2.2.0",
-        "ordinal": "^1.0.3"
+        "ordinal": "^1.0.3",
+        "pg": "^8.7.1",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.6.5"
     },
     "devDependencies": {
         "@tsconfig/node16": "^1.0.1",
         "@types/express": "^4.17.12",
         "@types/node": "^16.6.0",
+        "@types/sequelize": "^4.28.10",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^4.6.0",
         "dotenv": "^10.0.0",
