--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "discord.js": "^13.0.1",
+        "emoji-regex": "^9.2.2",
         "express": "^4.17.1",
         "got": "^11.8.2",
         "json5": "^2.2.0",
