Package and dev updates

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,7 @@
 {
 		"recommendations": [
 				"dbaeumer.vscode-eslint",
-				"mrmlnc.vscode-json5",
-				"ms-vscode-remote.remote-wsl",
-				"ms-vscode.js-debug-nightly"
+				"ms-vscode-remote.remote-wsl"
 		],
 		"unwantedRecommendations": [
 
