--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
     "name": "randle-discord",
     "description": "Dice, cards, and polls bot for Discord.",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "main": "./dist/app.js",
     "scripts": {
         "build": "tsc",
         "lint": "eslint ./src/ --fix",
         "start": "node --enable-source-maps ./dist/app.js",
-        "dev": "ts-node-dev --inspect --poll --interval 1000 --respawn --rs --transpile-only --watch -r dotenv/config ./src/app.ts"
+        "dev": "ts-node-dev --inspect --rs --transpile-only -r dotenv/config ./src/app.ts"
     },
     "engines": {
         "node": "^16"
     },
     "dependencies": {
-        "discord.js": "^13.0.1",
+        "discord.js": "^13.5.1",
         "emoji-regex": "^10.0.0",
-        "express": "^4.17.1",
-        "got": "^11.8.2",
+        "express": "^4.17.2",
+        "got": "^11.8.3",
         "json5": "^2.2.0",
-        "ordinal": "^1.0.3",
-        "pg": "^8.7.1",
-        "pg-hstore": "^2.3.4",
-        "sequelize": "^6.6.5"
+        "ordinal": "^1.0.3"
     },
     "devDependencies": {
         "@tsconfig/node16": "^1.0.1",
         "@types/express": "^4.17.12",
-        "@types/node": "^16.6.0",
-        "@types/sequelize": "^4.28.10",
-        "@typescript-eslint/eslint-plugin": "^4.6.0",
-        "@typescript-eslint/parser": "^4.6.0",
+        "@types/node": "^17.0.8",
+        "@typescript-eslint/eslint-plugin": "^5.9.0",
+        "@typescript-eslint/parser": "^5.9.0",
         "dotenv": "^10.0.0",
-        "eslint": "^7.12.1",
-        "ts-node-dev": "^1.0.0-pre.62",
-        "typescript": "^4.1.3"
+        "eslint": "^8.6.0",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.5.4"
     },
     "license": "MIT",
     "author": {
