--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "incremental": true,
+        "skipLibCheck": true,
         "sourceMap": true,
         "removeComments": true
     }
