--- a/package.json
+++ b/package.json
@@ -7,29 +7,30 @@
         "build": "tsc",
         "lint": "eslint ./src/ --fix",
         "start": "node --enable-source-maps ./dist/app.js",
-        "dev": "ts-node-dev --inspect --rs --transpile-only -r dotenv/config ./src/app.ts"
+        "dev": "node --inspect --enable-source-maps -r dotenv/config ./dist/app.js"
     },
     "engines": {
-        "node": "^16"
+        "node": "^18"
     },
+    "type": "module",
     "dependencies": {
+        "@types/inflection": "^1.13.0",
         "discord.js": "^13.5.1",
-        "emoji-regex": "^10.0.0",
-        "express": "^4.17.2",
-        "got": "^11.8.3",
-        "json5": "^2.2.0",
-        "ordinal": "^1.0.3"
+        "emoji-regex": "^10.1.0",
+        "express": "^4.18.1",
+        "got": "^12.1.0",
+        "inflection": "^1.13.2",
+        "json5": "^2.2.1"
     },
     "devDependencies": {
-        "@tsconfig/node16": "^1.0.1",
-        "@types/express": "^4.17.12",
-        "@types/node": "^17.0.8",
-        "@typescript-eslint/eslint-plugin": "^5.9.0",
-        "@typescript-eslint/parser": "^5.9.0",
-        "dotenv": "^10.0.0",
-        "eslint": "^8.6.0",
-        "ts-node-dev": "^1.1.8",
-        "typescript": "^4.5.4"
+        "@tsconfig/node18": "^1.0.1",
+        "@types/express": "^4.17.13",
+        "@types/node": "^18.0.6",
+        "@typescript-eslint/eslint-plugin": "^5.30.7",
+        "@typescript-eslint/parser": "^5.30.7",
+        "dotenv": "^16.0.1",
+        "eslint": "^8.20.0",
+        "typescript": "^4.7.4"
     },
     "license": "MIT",
     "author": {
