--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "randle-discord",
     "description": "Dice, cards, and polls bot for Discord.",
-    "version": "1.14.2",
+    "version": "1.14.3",
     "main": "./dist/app.js",
     "scripts": {
         "build": "tsc",
@@ -14,18 +14,19 @@
     },
     "type": "module",
     "dependencies": {
-        "@types/inflection": "^1.13.0",
         "discord.js": "^14.0.3",
-        "emoji-regex": "^10.1.0",
         "express": "^4.18.1",
         "got": "^12.1.0",
         "inflection": "^1.13.2",
-        "json5": "^2.2.1"
+        "json5": "^2.2.1",
+        "node-emoji": "^1.11.0"
     },
     "devDependencies": {
         "@tsconfig/node18": "^1.0.1",
         "@types/express": "^4.17.13",
+        "@types/inflection": "^1.13.0",
         "@types/node": "^18.0.6",
+        "@types/node-emoji": "^1.8.1",
         "@typescript-eslint/eslint-plugin": "^5.30.7",
         "@typescript-eslint/parser": "^5.30.7",
         "dotenv": "^16.0.1",
