--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "randle-discord",
     "description": "Dice, cards, and polls bot for Discord.",
-    "version": "1.14.3",
+    "version": "1.15.0",
     "main": "./dist/app.js",
     "scripts": {
         "build": "tsc",
@@ -14,24 +14,24 @@
     },
     "type": "module",
     "dependencies": {
+        "@tsconfig/node18": "^1.0.1",
+        "@types/express": "^4.17.13",
+        "@types/inflection": "^1.13.0",
+        "@types/node-emoji": "^1.8.1",
+        "@types/node": "^18.0.6",
         "discord.js": "^14.0.3",
         "express": "^4.18.1",
         "got": "^12.1.0",
         "inflection": "^1.13.2",
         "json5": "^2.2.1",
-        "node-emoji": "^1.11.0"
+        "node-emoji": "^1.11.0",
+        "typescript": "^4.7.4"
     },
     "devDependencies": {
-        "@tsconfig/node18": "^1.0.1",
-        "@types/express": "^4.17.13",
-        "@types/inflection": "^1.13.0",
-        "@types/node": "^18.0.6",
-        "@types/node-emoji": "^1.8.1",
         "@typescript-eslint/eslint-plugin": "^5.30.7",
         "@typescript-eslint/parser": "^5.30.7",
         "dotenv": "^16.0.1",
-        "eslint": "^8.20.0",
-        "typescript": "^4.7.4"
+        "eslint": "^8.20.0"
     },
     "license": "MIT",
     "author": {
