--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "randle",
     "description": "Dice, cards, and polls bot for Discord.",
-    "version": "1.15.1",
+    "version": "1.16.0",
     "main": "./dist/app.js",
     "scripts": {
         "build": "tsc",
@@ -17,21 +17,22 @@
         "@tsconfig/node18": "^1.0.1",
         "@types/express": "^4.17.13",
         "@types/inflection": "^1.13.0",
-        "@types/node-emoji": "^1.8.1",
         "@types/node": "^18.7.14",
-        "discord.js": "^14.3.0",
+        "@types/node-emoji": "^1.8.1",
+        "discord.js": "^14.8.0",
         "express": "^4.18.1",
         "got": "^12.4.1",
-        "inflection": "^1.13.2",
+        "inflection": "^2.0.1",
         "json5": "^2.2.1",
         "node-emoji": "^1.11.0",
-        "typescript": "^4.8.2"
+        "typescript": "^5.0.2"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.36.1",
         "@typescript-eslint/parser": "^5.36.1",
         "dotenv": "^16.0.2",
-        "eslint": "^8.23.0"
+        "eslint": "^8.23.0",
+        "eslint-plugin-deprecation": "^1.3.3"
     },
     "license": "MIT",
     "author": {
