--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "randle",
-    "description": "Dice, cards, and polls bot for Discord.",
-    "version": "1.17.0",
+    "description": "Dice, cards, polls, and tabletop gaming tools bot for Discord.",
+    "version": "1.17.1",
     "main": "./dist/app.js",
     "scripts": {
         "build": "tsc",
@@ -19,8 +19,8 @@
         "@types/node": "^20.4.2",
         "discord.js": "^14.11.0",
         "express": "^4.18.2",
-        "got": "^13.0.0",
-        "inflection": "^2.0.1",
+        "got": "^14.0.0",
+        "inflection": "^3.0.0",
         "json5": "^2.2.3",
         "node-emoji": "^2.1.0",
         "typescript": "^5.1.6"
@@ -30,7 +30,7 @@
         "@typescript-eslint/parser": "^6.0.0",
         "dotenv": "^16.3.1",
         "eslint": "^8.44.0",
-        "eslint-plugin-deprecation": "^1.4.1"
+        "eslint-plugin-deprecation": "^2.0.0"
     },
     "license": "MIT",
     "author": {
