--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
     "extends": "@tsconfig/node20/tsconfig.json",
-    "include": [ "./src/app.ts" ],
+    "include": [ "./src/**/*.ts" ],
     "compilerOptions": {
         "target": "ESNext",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
         "outDir": "./dist/",
         "incremental": true,
         "skipLibCheck": true,
