Last known changes

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,12 +16,14 @@
         "no-console": [ "warn", { "allow": [ "debug", "info", "warn", "error" ] } ],
         "no-multi-spaces": [ "warn" ],
         "object-curly-spacing": [ "warn", "always" ],
+        "prefer-const": "warn",
         "quotes": [ "warn", "single", { "avoidEscape": true } ],
         "quote-props": [ "warn", "consistent-as-needed" ],
         "semi": [ "warn", "always" ],
 
         "@typescript-eslint/member-delimiter-style": "warn",
         "@typescript-eslint/no-unnecessary-type-assertion": "error",
+        "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/prefer-for-of": "warn",
         "@typescript-eslint/prefer-nullish-coalescing": "warn",
         "@typescript-eslint/prefer-optional-chain": "warn",
