--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
     "name": "randle",
     "description": "Dice, cards, polls, and tabletop gaming tools bot for Discord.",
-    "version": "2.1",
+    "version": "2.2",
     "main": "./dist/app.js",
     "scripts": {
         "build": "tsc",
         "lint": "eslint ./src/ --fix",
-        "start": "node --enable-source-maps ./dist/app.js",
-        "dev": "node --inspect --enable-source-maps -r dotenv/config ./dist/app.js"
+        "dev": "node --inspect --enable-source-maps -r dotenv/config ./dist/app.js",
+        "start": "node --enable-source-maps ./dist/app.js"
     },
     "engines": {
-        "node": "^20"
+        "node": "^22"
     },
     "type": "module",
     "dependencies": {
-        "@tsconfig/node20": "^20.1.2",
+        "@tsconfig/node22": "^22.0.0",
         "@types/express": "^4.17.21",
-        "@types/node": "^20.10.5",
+        "@types/node": "^22.10.5",
         "discord.js": "^14.14.1",
         "express": "^4.18.2",
-        "got": "^14.0.0",
         "inflection": "^3.0.0",
-        "json5": "^2.2.3",
         "node-emoji": "^2.1.3",
         "typescript": "^5.3.3"
     },
