--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "type": "module",
     "dependencies": {
         "@tsconfig/node22": "^22.0.0",
+        "@types/d3-color": "^3.1.3",
+        "@types/d3-interpolate": "^3.0.4",
         "@types/express": "^4.17.21",
         "@types/node": "^22.10.5",
-        "discord.js": "^14.14.1",
+        "d3-color": "^3.1.0",
+        "d3-interpolate": "^3.0.1",
+        "discord.js": "^14.17.3",
         "express": "^4.18.2",
         "inflection": "^3.0.0",
         "node-emoji": "^2.1.3",
